--- a/src/main/res/drawable/side_nav_bar.xml
+++ b/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
+        android:centerColor="#2a5c57"
         android:endColor="#00695C"
         android:startColor="#4DB6AC"
         android:type="linear" />
