--- a/src/main/res/layout/item_card.xml
+++ b/src/main/res/layout/item_card.xml
@@ -98,6 +98,7 @@
                     android:visibility="gone">
 
                     <Button
+                        android:id="@+id/card_button_bar_edit"
                         style="?android:buttonBarButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
