Add support for organizing items as well

--- a/src/main/res/layout/item_card.xml
+++ b/src/main/res/layout/item_card.xml
@@ -103,6 +103,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/menu_edit" />
+
+                    <Button
+                        android:id="@+id/card_button_bar_organize"
+                        style="?android:buttonBarButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/organize_button_label" />
                 </LinearLayout>
 
             </LinearLayout>
