--- a/src/main/res/layout/activity_drawer_navigation.xml
+++ b/src/main/res/layout/activity_drawer_navigation.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -13,13 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+    <LinearLayout
+        android:id="@+id/navigation_drawer_sidebar_container"
+        style="?android:attr/colorBackground"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_drawer_navigation"
-        app:menu="@menu/activity_drawer_navigation_drawer" />
+        android:orientation="vertical">
+
+        <TextView
+            style="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingStart="2dp"
+            android:text="@string/collections" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/navigation_drawer_sidebar_recycler"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp" />
+    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
