--- a/src/main/res/layout/activity_drawer_navigation.xml
+++ b/src/main/res/layout/activity_drawer_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:paddingStart="2dp"
             android:text="@string/collections" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/navigation_drawer_sidebar_recycler"
             android:layout_width="200dp"
             android:layout_height="match_parent"
@@ -37,4 +37,4 @@
             tools:layout_editor_absoluteY="8dp" />
     </LinearLayout>
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
