--- a/src/main/res/layout/content_drawer_navigation.xml
+++ b/src/main/res/layout/content_drawer_navigation.xml
@@ -8,7 +8,7 @@
     tools:context="com.gimranov.zandy.app.DrawerNavigationActivity"
     tools:showIn="@layout/app_bar_drawer_navigation">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8dp"
