--- a/src/main/res/layout/item_card.xml
+++ b/src/main/res/layout/item_card.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/card_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -114,6 +114,6 @@
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </layout>
